Update: Added new media query to attempt to fix bg from repeating on mobile

--- a/style.css
+++ b/style.css
@@ -41,3 +41,9 @@ body {
     90% {transform: translate(4px, 4px) rotate(0deg); }
     100% {transform: translate(-4px, -4px) rotate(-1deg); }
 }
+
+@media only screen and (max-width: 1200px) {
+    body {
+        background-size: auto;
+    }
+}
